# DeepGuard

./: .gitattributes  .gitignore  LICENSE  README.md  README_JP.md  README_KR.md  attention.py  labels.txt  package-lock.json  pyproject.toml  requirements.txt  setup.py  train_eff_gcvit.py  train_eff_vit.py  transformer.py  utils.py
.github/: FUNDING.yml  labeler.yml
App/: .env  celery_app.py  main.py  requirements.txt
Attention/: __init__.py  attention_gate.py  cam.py  cbam.py  eca.py  sam.py  se_block.py  triplet_attention.py
Dataset/: __init__.py  dfdc_dataset.py  utils.py
Preprocessing/: Augmentation_Face_cut_out.py  Augmentation_MixUp.py  README.md  __init__.py  detect_original_faces.py  extract_crops.py  face_detector.py  generate_landmarks.py  generate_metadata.py  utils.py
Videos/: display_img.py  display_video.py
client/: package.json  vercel.json
deepguard/: MS-EffViT.md  MS_EffGCViT.md  MS_EffViT.md  __init__.py  train_eff_gcvit.py  train_eff_vit.py
explainability/: __init__.py  base_explainer.py  cam_evaluator.py  cam_explainer.py  eigenvalue_explainer.py  eigenvalue_explainers.py  gradient_explainer.py  image_explainer.py  misc_explainer.py  perturbation_explainer.py
inference/: README.md  image_predictor.py  image_predictor_prt.py  predict_video.py  utils.py  video_predictor.py  video_predictor_prt.py
multi-efficient-gcvit/: gcvit.py
multi-efficient-vit/: attention.py  branch.py  encoder.py  model.py  transformer.py
multi_efficient_vit/: __init__.py  model.py
preprocess/: __init__.py  face_detector.py  frame_extractor.py  landmark_detector.py
tutorials/: high_level_visualization.ipynb  low_level_visualization.ipynb  ms_eff_gcvit_high_level.ipynb  ms_eff_gcvit_low_level.ipynb  ms_eff_vit_high_level.ipynb  (+3 more)
(+141 files in other folders)
